fixed social links UI on mobile

--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -186,6 +186,12 @@
     gap: 1rem;
     margin-block: 1rem;
   }
+  .hero-section > .social-links-container > a {
+    padding: 0.5rem;
+  }
+  .hero-section > .social-links-container > a > img {
+    width: 1rem;
+  }
   .hero-section > .social-links-container::before {
     height: 115%;
   }
